[package]
name = "vanity-address"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bech32 = "0.9.1"
bip39 = "2.0.0"
chia-bls = "0.5.1"
chia-wallet = "0.5.1"
hex = "0.4.3"
inquire = "0.6.2"
num_cpus = "1.16.0"
rand_core = "0.6.4"
sha2 = "0.10.8"
